2011-11-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateTree),
	* src/mcs51/gen.c (assignResultValue): fixed bug #3419769
	* sdas/linksrc/lkmain.c (main): fixed bug #3362385
	* src/ds390/ralloc.c (packRegisters): fixed bug #3432159
	* support/regression/tests/condopptr.c: enable for all targets

2011-11-03 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: updated to support pic14 enhanced devices

2011-11-02 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt: prevent SDCC from assuming
	  a single data bank by specifying more memmap records (per device)

2011-11-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): allow array/integral type
	  combination in conditional operator (will promote to pointer)
	* support/regression/tests/condopptr.c: new regression
	  test to check pointer operand cases in conditional operator

2011-11-01 Raphael Neider <rneider AT web.de>

	* src/pic14/gen.c (inc_fsr): new code to handle FSR{,0} increments,
	  (emitPtrByteGet,emitPtrByteSet): fix pointer derefence,
	  (genNearPointerGet,genNearPointerSet): fixed for enhanced cores,
	  really closes #3431024
	* src/pic14/pcode.c (pCodeInitRegisters):
	  declare all "core registers" to reside in all banks to avoid
	  unnecessary BANKSELs
	* doc/sdccman.lyx: document definition of config words and the use
	  of libsdcce.lib and libme.lib for enhanced pic14 devices

2011-11-01 Raphael Neider <rneider AT web.de>

	* src/pic14/main.c (_pic14_do_link):
	  link with libsdcce.lib for enhanced devices

	* device/lib/Makefile.in:
	  find, copy, and rename enhanced core libraries as well

	* device/lib/pic14/NEWS:
	  document structural changes and support for enhanced cores

	* device/lib/pic14/Makefile.am,
	* device/lib/pic14/Makefile.common,
	* device/lib/pic14/Makefile.common.in (removed),
	* device/lib/pic14/Makefile.rules (removed),
	* device/lib/pic14/Makefile.subdir (removed),